# actor_poc

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: csv_to_numpy.json  test_all.json
examples/: benchmark_switch.rs  onnx_alone.rs  py_vs_rust.rs
resources/: sample_data.csv
scripts/: check_onnx_nodes.py  create_onnx_model_custom.py  create_test_csv.py  features.py  numpy_example.py
src/: config.rs  coordinator.rs  graph_visualizer.rs  http_input_handler.rs  lib.rs  main.rs  messages.rs  step.rs
src/steps/: batch_pooler.rs  csv_reader.rs  data_generator.rs  feature_processor.rs  http_output.rs  ml_model.rs  mod.rs  printer.rs  py_feature_processor.rs  step_join_point.rs
